--- a/Profile/profile.css
+++ b/Profile/profile.css
@@ -2,7 +2,7 @@
 
 body {
     min-height: 100%;
-    background-image: url(../images/recipebg.png);
+    background-image: url(../images/backgroundTest.png);
     background-color: rgb(255, 255, 255);
     background-size: cover;
     /* background-position: center;
@@ -50,7 +50,7 @@ h1{
 
 #mainbox{
 
-    background-color: rgba(186, 208, 144, 0.529);
+    background-color: rgba(186, 208, 144, 0.5);
     margin-top: 4%;
 
 }
@@ -138,7 +138,7 @@ h1{
 }
 
 h1.text-center {
-    margin-bottom: 10px; /* Adjust the margin-bottom value as needed */
+    margin-bottom: 10px; /* Adjust the margin-bottom*/
 }
 
 
