--- a/posts/posts.css
+++ b/posts/posts.css
@@ -88,7 +88,7 @@ html {
     padding: 5%;
     border-radius: 20px;
 
-    background-color: rgba(186, 208, 144, 0.5);
+    /* background-color: rgba(186, 208, 144, 0.5); */
 
 
    
