Add bacground images for post and profile page

--- a/Profile/profile.css
+++ b/Profile/profile.css
@@ -2,7 +2,7 @@
 
 body {
     min-height: 100%;
-    background-image: url(../images/backgroundTest.png);
+    background-image: url(../images/tart5.jpg);
     background-color: rgb(255, 255, 255);
     background-size: cover;
     /* background-position: center;
