--- a/posts/posts.css
+++ b/posts/posts.css
@@ -42,7 +42,7 @@ body{
 
 
 body {
-    background-image: url("/images/backgroundTest.png");
+    background-image: url("/images/recipeCardTarts.png");
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
