--- a/posts/posts.css
+++ b/posts/posts.css
@@ -1,14 +1,9 @@
 .card {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-
     margin: 10%;
+   
 
 }
-
-
-
-
-
 
 #profileLinks {
     display: flex;
@@ -26,8 +21,13 @@
 
 main {
 
-
     height: 100%;
+}
+
+#logoImage {
+    margin-left: 35%;
+    margin-bottom:4%;
+    
 }
 
 
@@ -59,14 +59,15 @@ html {
 
 
 #heroSection {
-    display: flex;
-    flex-wrap: nowrap;
-    text-align: center;
-    align-content: center;
-    justify-content: center;
+    display: inline-flex;
+    padding: 10%;
+    flex-wrap: wrap;
+    text-align: left;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', sans-serif;
     font-size: 40px;
     font-style: oblique;
-    font-weight: 700;
+    font-weight: bolder;
+    
 }
 
 
@@ -76,9 +77,9 @@ p {
     text-align: center;
     align-content: center;
     justify-content: center;
-   
+
     font-size: 175%;
-    color:black;
+    color: black;
     font-style: oblique;
     font-weight: 700%;
     font-family: 'Times New Roman', Times, serif;
@@ -150,28 +151,29 @@ p {
 #mountainInfo,
 #nationalPark {
     display: flex;
-    flex-wrap: wrap;
-   
-    
+    flex-wrap: nowrap;
+
+
 
 }
 
 #nationalPark {
     direction: rtl;
-    justify-content: space-between;
+    justify-content: space;
+    margin-top: 2%;
     align-content: flex-start;
 
 }
 
 #nationalParkHome {
     direction: ltr;
-    
+
 
 }
 
 #mountainInfoHome {
     direction: ltr;
-    
+
 }
 
 
@@ -179,14 +181,9 @@ p {
 /*mountain paragraph styling left to right*/
 #mountainInfo {
     direction: ltr;
-    justify-content: space-between;
+    justify-content: space;
     align-content: flex-end;
- 
+
     align-items: flex-end;
 
 }
-
-
-
-
-
