--- a/Profile/profile.css
+++ b/Profile/profile.css
@@ -7,8 +7,6 @@ body {
 
     background-color: rgb(255, 255, 255);
     background-size: cover;
-    /* background-position: center;
-       backdrop-filter: blur(7px) ; */
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -27,42 +25,21 @@ body {
 }
 
 
-
-
-/* #rightcolumn {
-
-    margin-top: 8%;
-
-    position: absolute;
-    right: 10%;
-    padding-top: 4%;
-    padding-bottom: 4%;
-    padding-inline: 2%;
-    width: 30%;
-
-} */
-
 h1{
-
     margin-top: 2%;
     margin-bottom: 4%;
-    color: #3d3c3be1;
+    color: #000000e1;
 }
 
 
 #mainbox{
-
-
-    background-color: rgba(252, 252, 252, 0.789);
-
-
+    background-color: rgba(252, 252, 252, 0.849);
     margin-top: 4%;
 
 }
 
 
 #buttongroup{
-
     margin-top: 10%;
 }
 
@@ -73,8 +50,8 @@ h1{
     padding: 1%;
     border-radius: 20px;
     width: 85%;
-    color: rgb(95, 195, 49);
-    background-color: rgba(233, 246, 205);
+    color: rgb(255, 255, 255);
+    background-color: rgb(128, 159, 71, 0.825);
    
 
 }
@@ -96,10 +73,10 @@ h1{
 
 #editBioBtn{
     background-color: rgb(159, 210, 38); /* Set the background color to pink */
-        padding: 5px 10px; /* Adjust the padding to make it small */
-        font-size: 14px; /* Adjust the font size to make it small */
-        border: none; /* Remove the default button border */
-        color: white; /* Set the text color to white for better visibility */
+    padding: 5px 10px; /* Adjust the padding to make it small */
+    font-size: 14px; /* Adjust the font size to make it small */
+    border: none; /* Remove the default button border */
+    color: white; /* Set the text color to white for better visibility */
 }
 
 #updateBioBtn{
@@ -113,11 +90,11 @@ h1{
 #postBtn{
 
     background-color: rgb(159, 210, 38); /* Set the background color to pink */
-        padding: 5px 10px; /* Adjust the padding to make it small */
-        font-size: 14px; /* Adjust the font size to make it small */
-        border: none; /* Remove the default button border */
-        color: white; /* Set the text color to white for better visibility */
-        margin-bottom: 6%;
+    padding: 5px 10px; /* Adjust the padding to make it small */
+    font-size: 14px; /* Adjust the font size to make it small */
+    border: none; /* Remove the default button border */
+    color: white; /* Set the text color to white for better visibility */
+    margin-bottom: 6%;
         
 }
 
@@ -141,10 +118,8 @@ h1{
 #postContainer{
     border: 4px dotted #9dc696;  
     border-radius: 20px;
-    background-color: rgb(233, 246, 205);
-    color: rgb(95, 195, 49);
-    
-    /* #4d7e68 */
+    background-color: rgb(128, 159, 71, 0.825);
+    color: rgb(255, 255, 255);
 }
 
 
@@ -158,7 +133,11 @@ h1.text-center {
 
 #title{
     text-align:center;
-    margin-top: 6%;
-    margin-bottom: -3%;
-   
+    margin-top: 2%;
+    margin-bottom: -3%; 
+}
+
+#logoImage {
+    margin-top: 2%;
+    margin-left: 47%;
 }
